--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
+    "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
@@ -40,9 +41,13 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@expo/metro-config": "^54.0.13",
     "@types/react": "~19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "metro": "^0.83.3",
+    "metro-config": "^0.83.3",
     "typescript": "~5.9.2"
   },
   "private": true
