--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,14 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"],
+      "@core/*": ["app/src/core/*"],
+      "@data/*": ["app/src/data/*"],
+      "@infrastructure/*": ["app/src/infrastructure/*"],
+      "@presentation/*": ["app/src/presentation/*"],
+      "@store/*": ["app/src/store/*"]
     }
   },
   "include": [
