--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -27,6 +28,7 @@
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
