--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ app-example
 # generated native folders
 /ios
 /android
+
+# Keystores y archivos de firma (NUNCA subir al repositorio)
+*.keystore
+*.jks
+gradle.properties
+local.properties
