syncronizacion uuid, answer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@data/*": ["app/src/data/*"],
       "@infrastructure/*": ["app/src/infrastructure/*"],
       "@presentation/*": ["app/src/presentation/*"],
-      "@store/*": ["app/src/store/*"]
+      "@store/*": ["app/src/store/*"],
+      "@shared/*": ["app/src/shared/*"]
     }
   },
   "include": [
