previsualizacion video, inventarios entre otros

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@infrastructure/*": ["app/src/infrastructure/*"],
       "@presentation/*": ["app/src/presentation/*"],
       "@store/*": ["app/src/store/*"],
-      "@shared/*": ["app/src/shared/*"]
+      "@shared/*": ["app/src/shared/*"],
+      "@components/*": ["app/src/components/*"]
     }
   },
   "include": [
