--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.31",
+    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.13",
     "expo-crypto": "^15.0.8",
     "expo-file-system": "~19.0.21",
